# cloudflare-zero-trust-adblock-updater

./: .cf-zt-oisd-state.json  .env.example  .gitignore  README.md  cf-zt-oisd-sync.spec  pyproject.toml  run.py  tz_cf_zero_trust_oisd_sync_codex.md  ui_requirements_cf_zero_trust_oisd_sync.md
.github/workflows/: example-update.yml
cf_zt_oisd_sync/: cli.py  cloudflare.py  config.py  menu.py  models.py  normalize.py  oisd.py  state.py  sync.py
tests/: test_normalize.py  test_sync_payloads.py
