[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-zt-oisd-sync"
version = "0.1.0"
description = "Sync OISD small domains to Cloudflare Zero Trust Gateway lists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "idna>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
cf-zt-oisd-sync = "cf_zt_oisd_sync.cli:app"

[tool.setuptools]
packages = ["cf_zt_oisd_sync"]

[tool.pytest.ini_options]
pythonpath = ["."]
